# basic-linux-OS

./: .gitignore  CMakeLists.txt
done/: README.md  bmblock.c  direntv6.c  error.h  filev6.c  fs.c  inode.c  makefile  mount.c  ourcode.uv6  sector.c  sha.c  shell.c  test-bitmap.c  test-dirent.c  test-file.c  unixv6fs.h
done/unixv6/: inode.c  makefile  mount.c  sector.c
provided/: mount.c  projet01_feedback.txt  projet02_feedback.txt  sector.c  unixv6fs.h  week07_feedback.txt  week08_feedback.txt  week09_feedback.txt  week10_feedback.txt  week11_feedback.txt  week12_feedback.txt
provided/grading/projet01/: direntv6.c  error.h  filev6.c  inode.c  mount.c  projet01.yaml  sector.c  sha.c  shell.c  test-dirent.c  test-file.c  test-inodes.c  unixv6fs.h
provided/grading/projet02/: diff_from_provided.txt  fs.c  makefile  projet02.yaml  sector.h  shell.c  test-dirent.c  test-inodes.c  vagrant_output.txt
provided/grading/projet_final/: diff_from_provided.txt  direntv6.c  filev6.c  inode.h  mount.c  projet_final.yaml  test-bitmap.c  test-bitmap_output.txt  test-core.c  test-dirent_output.txt  test-file_output.txt  test-fuse.txt  test-inodes.c  test-inodes_output.txt  test-shell-week11.txt  (+2 more)
work/: bmblock.c  direntv6.c  filev6.c  fs  fs.c  inode.c  inodes.c  makefile  mount.c  out.txt  sector.c  sector.h  sha.c  shell  shell.c  test-bitmap  test-bitmap.c  test-cat.txt  test-core.c  test-dirent  test-dirent.c  test-file  test-file.c  test-inodes  test-inodes.c  text.txt  unixv6fs.h
work/disks/: aiw.uv6  first.uv6  simple.uv6  test.uv6  test10.uv6  test2.uv6  test20.uv6
